welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:4: error: not found: value len
  var longueurTab:Int = len(nums)
                        ^