welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.code
def indexOfMaxValue(nums:Array[Int]):Int = {
  var indexMaxi:Int = 0
  var maxi:Int = nums(0)
  var longueurTab:Int = len(nums)
  for (i <- 0 to longueurTab) {
    if (nums(i) > maxi) {
      maxi = nums(i)
      indexMaxi = i
    }
  }
  return indexMaxi
}